<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/menu_favorites"
            android:text="@string/menu_favorites"
            style="@style/MainMenu_Entry"/>

        <TextView
            android:id="@+id/menu_hidden_apps"
            android:text="@string/menu_hidden_apps"
            style="@style/MainMenu_Entry"/>

        <TextView
            android:id="@+id/menu_refresh_list"
            android:text="@string/menu_refresh_list_apps"
            style="@style/MainMenu_Entry"/>

        <TextView
            android:id="@+id/menu_settings_appearance"
            android:text="@string/menu_settings_appearance"
            style="@style/MainMenu_Entry"/>

        <TextView
            android:id="@+id/menu_settings_operation"
            android:text="@string/menu_settings_operation"
            style="@style/MainMenu_Entry"/>

    </LinearLayout>

</ScrollView>
